--- a/config_test.toml
+++ b/config_test.toml
@@ -1,6 +1,7 @@
 [source]
 url = "https://uat-metashare.maps.vic.gov.au/geonetwork/srv/api"
 search_endpoint = "search/records/_search"
+test_endpoint = "site"
 grdc_filter_keywords = ["grdc", "GRDC", "Grains Research and Development Corporation", "grains research and development corporation", "Grain Research and Development Corporation", "grain research and development corporation"]
 
 [notifications]
